syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb";

package loop;

import "codec.proto";
import "google/protobuf/empty.proto";

service ChainReader {
  rpc GetLatestValue (GetLatestValueRequest) returns (GetLatestValueReply) {}
  rpc QueryKey (QueryKeyRequest) returns (QueryKeyReply) {}
  rpc QueryKeys (QueryKeysRequest) returns (QueryKeysReply) {}
  rpc QueryByKeyValuesComparison (QueryByKeyValuesComparisonRequest) returns (QueryByKeyValuesComparisonReply) {}
  rpc QueryByKeysValuesComparison (QueryByKeysValuesComparisonRequest) returns (QueryByKeysValuesComparisonReply) {}
  rpc Bind(BindRequest) returns (google.protobuf.Empty) {}
}

// GetLatestValueRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.GetLatestValue].
message GetLatestValueRequest {
  string contractName = 1;
  string method = 2;
  VersionedBytes params = 3;
}

// QueryKeysByValuesRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryKey].
message QueryKeyRequest {
  string key = 1;
  QueryFilter query_filter = 2;
  LimitAndSort limit_and_sort = 3;
}

// QueryKeysByValuesRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryKeys].
message QueryKeysRequest {
  repeated string keys = 1;
  QueryFilter query_filter = 2;
  LimitAndSort limit_and_sort = 3;
}

// QueryByKeyValuesComparisonRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryByKeyValuesComparison].
message QueryByKeyValuesComparisonRequest {
  KeyValuesComparator key_values_comparator = 1;
  QueryFilter query_filter = 2;
  LimitAndSort limit_and_sort = 3;
}

// QueryByKeysValuesComparisonRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryByKeysValuesComparison].
message QueryByKeysValuesComparisonRequest {
  repeated KeyValuesComparator keys_values_comparator = 1;
  QueryFilter query_filter = 2;
  LimitAndSort limit_and_sort = 3;
}

// GetLatestValueRequest has arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.BindRequest].
message BindRequest {
  repeated BoundContract bindings = 1;
}

// GetLatestValueReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.GetLatestValue].
message GetLatestValueReply {
  VersionedBytes retVal = 1;
}

// QueryKeysReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryKey].
message QueryKeyReply {
  Sequences sequences = 1;
}

// QueryKeysReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryKeys].
message QueryKeysReply {
 repeated Sequences sequences = 1;
}

// QueryByKeyValuesComparisonReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryByKeyValuesComparison].
message QueryByKeyValuesComparisonReply {
  Sequences sequences = 1;
}

// QueryByKeysValuesComparisonReply has return arguments for [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.QueryByKeysValuesComparison].
message QueryByKeysValuesComparisonReply {
  repeated Sequences sequences = 1;
}

// Head is gRPC adapter for the Head struct [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.Head].
message Head {
  uint64 number = 1;
  bytes hash = 2;
  uint64 timestamp = 3;
}

// Head is gRPC adapter for the Head struct [github.com/smartcontractkit/chainlink-common/pkg/types.ChainReader.Sequence].
message Sequence {
  string sequence_cursor = 1;
  Head head = 2;
  VersionedBytes data = 3;
}

message Sequences {
  repeated Sequence sequences = 1;
}

// BoundContract represents a [github.com/smartcontractkit/chainlink-common/pkg/types.BoundContract].
message BoundContract {
  string address = 1;
  string name = 2;
  bool pending = 3;
}

enum ComparisonOperator {
  Eq = 0;
  Neq = 1;
  Gt = 2;
  Lt = 3;
  Gte = 4;
  Lte = 5;
}

message ValueComparator {
  // TODO pass interface{} here
  string value = 1;
  ComparisonOperator operator = 2;
}

message KeyValuesComparator{
  string key = 1;
  repeated ValueComparator value_comparators = 2;
}

// QueryFilter represents a lightweight orm like DSL defined for filtering over common blockchain primitives.
message QueryFilter {
  repeated Expression expression = 1;
}

// Expression encapsulates a single unit of filtering logic, which can be a common blockchain primitive or a composite of boolean expressions. 
// This allows for both simple and more complex nested expressions.
message Expression {
  oneof evaluator {
    Primitive primitive = 1;
    BooleanExpression boolean_expression = 2;
  }
}

enum BooleanOperator {
  AND = 0;
  OR = 1;
}

message BooleanExpression {
  BooleanOperator boolean_operator = 1;
  repeated Expression expression = 2;
}

message And {
  repeated Expression a = 1;
}

message Or {
  repeated Expression a = 1;
}

message Address {
  repeated string addresses = 1;
}

enum ConfirmationLevel {
  Finalized   = 0;
  Unconfirmed = 1;
}

message Confirmations {
  ConfirmationLevel confirmations = 1;
}

message Block{
  uint64 block_number = 1;
  ComparisonOperator operator = 2;
}

message Timestamp{
  uint64 timestamp = 1;
  ComparisonOperator operator = 2;
}

message TxHash{
  string tx_hash = 1;
}

// Primitive defines the basic building blocks for filter conditions based around fundamental blockchain concepts.
message Primitive {
  oneof comparator {
    Address address = 3;
    Confirmations confirmations = 4;
    Block block = 5;
    Timestamp timestamp = 6;
    TxHash tx_hash = 7;
  }
}

enum SortDirection {
  Asc = 0;
  Desc = 1;
}

message SortByTimestamp {
  SortDirection sort_direction = 1;
}

message SortByBlock {
  SortDirection sort_direction = 1;
}

message SortBySequence {
  SortDirection sort_direction = 1;
}

message SortBy {
  oneof sort_by {
    SortByTimestamp sort_by_timestamp = 1;
    SortByBlock sort_by_block = 2;
    SortBySequence sort_by_sequence = 3;
  }
}

message LimitAndSort{
  uint64 limit = 1;
  repeated SortBy sort_by = 2;
}